logs/anyvc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anyvc'...
Compiling './lib/python3.5/site-packages/anyvc/client.py'...
***   File "./lib/python3.5/site-packages/anyvc/client.py", line 156
    print repo.push(location, opts.revision)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anyvc/common'...
Listing './lib/python3.5/site-packages/anyvc/git'...
Compiling './lib/python3.5/site-packages/anyvc/git/repo.py'...
***   File "./lib/python3.5/site-packages/anyvc/git/repo.py", line 113
    print tree._entries
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/anyvc/mercurial'...
Compiling './lib/python3.5/site-packages/anyvc/mercurial/workdir.py'...
***   File "./lib/python3.5/site-packages/anyvc/mercurial/workdir.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anyvc/remote'...
Listing './lib/python3.5/site-packages/anyvc/subversion'...
Compiling './lib/python3.5/site-packages/anyvc/subversion/workdir.py'...
***   File "./lib/python3.5/site-packages/anyvc/subversion/workdir.py", line 83
    print rev
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/anyvc-0.3.7.1.egg-info'...
Listing './lib/python3.5/site-packages/apipkg-1.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
